--- a/07_组件_添加列表练习/添加列表练习.html
+++ b/07_组件_添加列表练习/添加列表练习.html
@@ -13,20 +13,53 @@
 <!--要使用 propTypes，必须引入这个包！-->
 <script src="../js/prop-types.js"></script>
 <script src="../js/babel.min.js"></script>
+<!--
+组件化编码的基本流程
+1. 拆分组件
+2. 实现静态组件: 静态页面效果
+3. 实现动态组件
+  1). 动态显示初始数据数据
+    a. 设计初始化数据:
+      类型/名称?: todos = []
+      在哪个组件中?  是哪个组件需要还是哪些组件(父)需要?  App
+    b. 指定初始化数据, 并显示
+  2). 交互
+    a. 给特定标签绑定特定事件监听
+    b. 在事件回调函数中处理并更新状态
 
+注意: 状态在哪个组件, 更新状态的行为(函数)就应该定义在哪个组件
+-->
 <script type="text/babel">
+
     class App extends React.Component{
         state = {
             todos: [1,2,3,4]
         }
+        /*
+        * 列表中的内容因为要实时变化，所以将其定义为整个应用的组件 App的 state属性的属性值。
+        *   所以更新也要在 App类中！
+        *   所以通过 Add类中的点击事件，来执行在App中定义的方法，来更新state中的数据
+        * */
+        addToDo = (todo) => {
+            /*
+            * 为什么不能这样直接调用？
+            * 因为函数的调用，从离得最近的开始，会先找 todos.unshift(todo)
+            *   而 todos还没有定义
+            * */
+            // this.state.todos.unshift(todo)
+            console.log(this.state.todos) //还是数组
 
-        addToDo() {
-            
+            const {todos} = this.state
+            todos.unshift(todo)
+            //添加完成后，更新
+            this.setState({
+                todos
+            })
         }
 
         render() {
             const todos = this.state.todos
-
+            //在render()中返回其他的组件标签，最后直接渲染 App组件标签即可
             return (
                 <div>
                     <Add todos={todos} addToDo={this.addToDo}/>
@@ -38,15 +71,21 @@
 
     class Add extends React.Component{
         static propTypes =  {
-            todos : PropTypes.array.isRequired
+            todos : PropTypes.array.isRequired,
+            //注意是 func(因为function是关键字)
+            addToDo : PropTypes.func.isRequired
         }
 
-
-        addToDo(){
-            const inputValue = this.contentInput.value
-            const {todos} = this.props
-            todos.unshift(inputValue)
-
+        addToDo = () => {
+            //去除输入内容，左右2边空格。并且保证不能为空
+            const inputValue = this.contentInput.value.trim()
+            if(inputValue){
+                this.props.addToDo(inputValue)
+            }else {
+                alert('不能为空！')
+            }
+            //添加之后，清空输入框
+            this.contentInput.value = ''
         }
 
         render() {
@@ -58,7 +97,6 @@
                     <button onClick={this.addToDo}>Add#{todos.length}</button>
                 </div>
             )
-
         }
     }
 
@@ -74,6 +112,7 @@
                 <ul>
                 {
                     todos.map((todo, index) => {
+                        //注意需要key做唯一标识
                         return <li key={index}>{todo}</li>
                     })
                 }
